admin/admin_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: admin
  labels:
    ippool.calico.org/name: admin-ip-pool
